[package]
name = "surfpool-sdk"
description = "SDK for embedding Surfpool in Rust integration tests"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
hex = { workspace = true }
hiro-system-kit = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-client = { workspace = true }
solana-clock = { workspace = true }
solana-epoch-info = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-rpc-client = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

surfpool-core = { workspace = true }
surfpool-types = { workspace = true }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking", "default-tls", "json"] }
serde = { workspace = true, features = ["derive"] }
zip = { workspace = true }

[dev-dependencies]
solana-program-pack = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
solana-message = { workspace = true }
solana-hash = { workspace = true }
solana-commitment-config = { workspace = true }
spl-token-interface = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
