[package]
name = "surfpool-studio-ui"
description = "Crate for starting the surfpool studio UI"
version = "0.1.1"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
base58 = { workspace = true }
dotenvy = { workspace = true }
hiro-system-kit = { workspace = true }
include_dir = { workspace = true }
juniper_actix = { workspace = true, features = ["subscriptions"] }
juniper_graphql_ws = { workspace = true, features = ["graphql-transport-ws"] }
mime_guess = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

[build-dependencies]
npm_rs = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "default-tls"] }
zip = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]
